# django-easysettings

./: .gitignore  CHANGES.rst  MANIFEST.in  Pipfile  README.rst  easysettings.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
easysettings/: __init__.py  app.py  legacy.py
easysettings/tests/: examples.py  test_app.py  test_legacy.py
