[metadata]
name = django-easysettings
version = 2.0.dev0
description = Easy app-specific settings for Django
url = http://github.com/SmileyChris/django-easysettings
long_description = file: README.rst
author = Chris Beaven
author_email = smileychris@gmail.com
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = find:

[options.extras_require]
maintainer =
    zest.releaser[recommended]
dev =
    tox
    pytest-mock
test =
    pytest-mock
    pytest-cov

[bdist_wheel]
# Works in both Python 2 and Python 3
universal = 1

[coverage:run]
source = easysettings

[zest.releaser]
tag-signing = yes
date-format = %%-d %%B %%Y
